Added Github actions

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -9,6 +9,10 @@ additional_fqdns: []
 database:
     type: mariadb
     version: "10.11"
+hooks:
+    post-start:
+        # Run initial setup tasks.
+        - exec: .devpanel/init.sh
 use_dns_when_possible: true
 composer_version: "2"
 web_environment:
