Added ability to choose between CMS/core, choose version, removed core from being built from source for speed, only contrib (need to add AI from source), added in dependencies and scripts from AI demo

--- a/.github/workflows/docker-publish-image.yml
+++ b/.github/workflows/docker-publish-image.yml
@@ -33,7 +33,7 @@ jobs:
           DB_USER: user
           DB_PASSWORD: password
           DB_DRIVER: mysql
-          DP_CORE_VERSION: ${{ inputs.drupal_core_version || '' }}
+          DP_VERSION: ${{ inputs.drupal_core_version || '' }}
         ports:
           - 80:80
         volumes:
