--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,5 +1,4 @@
-name: DrupalPod
-type: drupal
+type: drupal11
 docroot: web
 php_version: "8.3"
 webserver_type: apache-fpm
@@ -7,26 +6,33 @@ xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-    type: mariadb
-    version: "10.11"
+    type: mysql
+    version: "8.0"
 hooks:
     post-start:
+        # Set up debugging.
+        - exec: test -f .vscode/launch.json || mkdir -p .vscode && cp .ddev/launch.json .vscode/
         # Run initial setup tasks.
         - exec: .devpanel/init.sh
 use_dns_when_possible: true
 composer_version: "2"
 web_environment:
+    # Set up DevPanel variables.
     - APP_ROOT=$DDEV_COMPOSER_ROOT
     - WEB_ROOT=$DDEV_COMPOSER_ROOT/$DDEV_DOCROOT
     - DP_STARTER_TEMPLATE=cms
+    - DP_VERSION=2.0.x
     - DB_HOST=db
     - DB_PORT=3306
     - DB_USER=db
     - DB_PASSWORD=db
     - DB_NAME=db
-    - DP_APP_ID=drupalpod
+    - DP_APP_ID=drupalpod_ai_qa
     - DB_DRIVER=mysql
+    - DP_AI_VIRTUAL_KEY=
+    - DP_REBUILD=1
 corepack_enable: false
+ddev_version_constraint: '>=1.24.0'
 
 # Key features of DDEV's config.yaml:
 
