--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
-# Drupal
-/web/
+/.devpanel/dumps/
+/.devpanel/salt.txt
+/.editorconfig
+/.gitattributes
+/.vscode/
+/composer.json
+/composer.lock
+/config/
+/logs/*
+/patches.lock.json
+/private/
+/README.md
+/recipes/
 /vendor/
-composer.json
-composer.lock
-.editorconfig
-.gitattributes
-
-# DrupalPod
-.drupalpod_initiated
-src/**/node_modules/
-src/**/package-lock.json
-src/**/out/
-src/**/*.vsix
-src/**/.vscode-test/
-drush/
-.ddev/config.gitpod.yaml
+/web/
