Starter kit logic finalised, AI modules added (cloned and checked with composer constraints), added bats testing - need to update README

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -12,16 +12,14 @@ hooks:
     post-start:
         # Set up debugging.
         - exec: test -f .vscode/launch.json || mkdir -p .vscode && cp .ddev/launch.json .vscode/
-        # Run initial setup tasks.
-        - exec: .devpanel/init.sh
+        # Run initial setup tasks only when needed (DP_REBUILD=1 or Drupal not installed).
+        - exec: 'if [ "${DP_REBUILD:-0}" = "1" ] || ! drush status --field=bootstrap 2>/dev/null | grep -q "Successful"; then .devpanel/init.sh; fi'
 use_dns_when_possible: true
 composer_version: "2"
 web_environment:
     # Set up DevPanel variables.
     - APP_ROOT=$DDEV_COMPOSER_ROOT
     - WEB_ROOT=$DDEV_COMPOSER_ROOT/$DDEV_DOCROOT
-    - DP_STARTER_TEMPLATE=cms
-    - DP_VERSION=2.0.x
     - DB_HOST=db
     - DB_PORT=3306
     - DB_USER=db
@@ -29,8 +27,8 @@ web_environment:
     - DB_NAME=db
     - DP_APP_ID=drupalpod_ai_qa
     - DB_DRIVER=mysql
-    - DP_AI_VIRTUAL_KEY=
-    - DP_REBUILD=1
+    # AI ecosystem modules to always try to clone (compatibility filtered)
+    - DP_AI_MODULES=ai_provider_litellm,ai_search,ai_agents
 corepack_enable: false
 ddev_version_constraint: '>=1.24.0'
 
