--- a/.github/workflows/docker-publish-images.yml
+++ b/.github/workflows/docker-publish-images.yml
@@ -10,30 +10,23 @@ concurrency:
 permissions:
   actions: write
 jobs:
-  build-php-8_2-cms:
-    uses: ./.github/workflows/docker-publish-image.yml
-    with:
-      webserver_image: devpanel/php:8.2-base-ai
-      image_tag_suffix: cms
-    secrets: inherit
-#
 #  build-php-8_2-core:
 #    needs: build-php-8_2-cms
 #    uses: ./.github/workflows/docker-publish-image.yml
 #    with:
 #      webserver_image: devpanel/php:8.2-base-ai
-#      drupal_core_version: '11.x'
+#      drupal_core_version: '10.x'
 #      image_tag_suffix: core
 #    secrets: inherit
-#
-#  build-php-8_3-cms:
-#    needs: build-php-8_2-core
-#    uses: ./.github/workflows/docker-publish-image.yml
-#    with:
-#      webserver_image: devpanel/php:8.3-base-ai
-#      drupal_core_version: '1.2.0'
-#      image_tag_suffix: cms
-#    secrets: inherit
+
+  build-php-8_3-cms:
+    needs: build-php-8_2-core
+    uses: ./.github/workflows/docker-publish-image.yml
+    with:
+      webserver_image: devpanel/php:8.3-base-ai
+      drupal_core_version: '1.2.0'
+      image_tag_suffix: cms
+    secrets: inherit
 #
 #  build-php-8_3-core:
 #    needs: build-php-8_3-cms
