--- a/.github/workflows/docker-publish-image.yml
+++ b/.github/workflows/docker-publish-image.yml
@@ -77,6 +77,9 @@ jobs:
         docker exec ${{ job.services.webserver.id }} bash -c "sudo cp -r /app/. /var/www/html/."
         docker exec ${{ job.services.webserver.id }} bash -c "sudo mkdir -p /var/www/html/docroot"
         docker exec ${{ job.services.webserver.id }} bash -c "sudo chown -R www:www /var/www/html"
+        echo "CONFIGURE APACHE"
+        docker exec ${{ job.services.webserver.id }} bash -c "sudo sed -i 's|{{WEB_ROOT}}|/var/www/html/docroot/web|g' /etc/apache2/apache2.conf"
+        docker exec ${{ job.services.webserver.id }} bash -c "sudo service apache2 restart || true"
         docker exec ${{ job.services.webserver.id }} bash -c "export && cd /var/www/html && ls -al"
         echo "SET UP GIT"
         docker exec ${{ job.services.webserver.id }} bash -c "git config --global --add safe.directory /var/www/html"
