--- a/.github/workflows/docker-publish-image.yml
+++ b/.github/workflows/docker-publish-image.yml
@@ -80,7 +80,10 @@ jobs:
         echo "CONFIGURE APACHE"
         docker exec ${{ job.services.webserver.id }} bash -c "sudo sed -i 's|{{WEB_ROOT}}|/var/www/html/docroot/web|g' /etc/apache2/apache2.conf"
         docker exec ${{ job.services.webserver.id }} bash -c "sudo service apache2 restart || true"
-        docker exec ${{ job.services.webserver.id }} bash -c "export && cd /var/www/html && ls -al"
+        echo "CHECK DATABASE CONNECTION"
+        docker exec ${{ job.services.webserver.id }} bash -c "mysqladmin ping -h mysql -u user -ppassword || echo 'DB not ready'"
+        echo "CHECK ENVIRONMENT VARIABLES"
+        docker exec ${{ job.services.webserver.id }} bash -c "echo DB_HOST=\$DB_HOST DB_NAME=\$DB_NAME DB_USER=\$DB_USER DP_APP_ID=\$DP_APP_ID"
         echo "SET UP GIT"
         docker exec ${{ job.services.webserver.id }} bash -c "git config --global --add safe.directory /var/www/html"
         docker exec ${{ job.services.webserver.id }} bash -c "git config --global --add safe.directory /var/www/html/docroot"
