--- a/.github/workflows/docker-publish-images.yml
+++ b/.github/workflows/docker-publish-images.yml
@@ -1,3 +1,4 @@
+# Jobs require one another to prevent time-outs.
 name: Docker build and push template
 on:
   push:
@@ -10,28 +11,28 @@ concurrency:
 permissions:
   actions: write
 jobs:
-#  build-php-8_2-core:
-#    needs: build-php-8_2-cms
-#    uses: ./.github/workflows/docker-publish-image.yml
-#    with:
-#      webserver_image: devpanel/php:8.2-base-ai
-#      drupal_core_version: '10.x'
-#      image_tag_suffix: core
-#    secrets: inherit
+  build-php-8_2-core:
+    uses: ./.github/workflows/docker-publish-image.yml
+    with:
+      webserver_image: devpanel/php:8.2-base-ai
+      drupal_core_version: '10.x'
+      image_tag_suffix: core
+    secrets: inherit
 
   build-php-8_3-cms:
+    needs: build-php-8_2-core
     uses: ./.github/workflows/docker-publish-image.yml
     with:
       webserver_image: devpanel/php:8.3-base-ai
       drupal_version: '1.2.0'
       image_tag_suffix: cms
     secrets: inherit
-#
-#  build-php-8_3-core:
-#    needs: build-php-8_3-cms
-#    uses: ./.github/workflows/docker-publish-image.yml
-#    with:
-#      webserver_image: devpanel/php:8.3-base-ai
-#      drupal_core_version: '11.x'
-#      image_tag_suffix: core
-#    secrets: inherit
+
+  build-php-8_3-core:
+    needs: build-php-8_3-cms
+    uses: ./.github/workflows/docker-publish-image.yml
+    with:
+      webserver_image: devpanel/php:8.3-base-ai
+      drupal_core_version: '11.x'
+      image_tag_suffix: core
+    secrets: inherit
