--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = repos/ai_search
 	url = https://git.drupalcode.org/project/ai_search.git
 	ignore = dirty
+[submodule "repos/ai_seo"]
+	path = repos/ai_seo
+	url = https://git.drupalcode.org/project/ai_seo.git
